Bug 399260 - title of report is truncated in graph view
Summary: title of report is truncated in graph view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2018-09-30 22:46 UTC by Octopuss
Modified: 2019-01-26 18:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments
the name of a report is reduced on a last letter (238.58 KB, image/png)
2018-09-30 22:46 UTC, Octopuss
Details
screen1 (34.06 KB, image/png)
2018-10-02 11:48 UTC, Octopuss
Details
screen2 (21.06 KB, image/png)
2018-10-02 11:48 UTC, Octopuss
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Octopuss 2018-09-30 22:46:22 UTC
Created attachment 115334 [details]
the name of a report is reduced on a last letter

SUMMARY
The caption of a report is reduced. 


STEPS TO REPRODUCE
1. open report for ex. reports - 2.Net Worth - Net Worth by Year (default report)
2. check the name of the report

OBSERVED RESULT
The name of the report reduced to "Net Worth by yea"

EXPECTED RESULT
The name should be "Net Worth by year"

SOFTWARE VERSIONS
KDE Plasma Version: 5.12.6
KDE Frameworks Version: 5.45.0
Qt Version: 5.9.4

ADDITIONAL INFORMATION
OS: OpenSUSE 15.0
KMyMoney package info: 
  Repository     : openSUSE-Leap-15.0-Update
  Name           : kmymoney
  Version        : 5.0.1-lp150.2.3.1
  Arch           : x86_64
  Vendor         : openSUSE
  Status         : up-to-date
  Source package : kmymoney-5.0.1-lp150.2.3.1.src
Comment 1 Thomas Baumgart 2018-10-01 06:11:14 UTC
Please check the configuration of the report. Is it missing there as well? I am unable to duplicate this on current HEAD of the 5.0 branch. Though it should not happen with a default report. Strange.
Comment 2 Octopuss 2018-10-02 11:44:02 UTC
The configuration is fine, every letter is in place.
btw, the issue is only in graph view. On a report view everything is fine.
Comment 3 Octopuss 2018-10-02 11:48:36 UTC
Created attachment 115363 [details]
screen1
Comment 4 Octopuss 2018-10-02 11:48:50 UTC
Created attachment 115364 [details]
screen2
Comment 5 Thomas Baumgart 2018-10-02 13:02:07 UTC
I expect this is either already fixed or a problem of KChart. I am using libKChart2-2.6.0-1.1.x86_64 on my openSUSE 42.3 with current KMyMoney 5.0 HEAD and am unable to duplicate the problem. Which version of KChart is used on your system?
Comment 6 Octopuss 2018-10-02 16:23:34 UTC
(In reply to Thomas Baumgart from comment #5)
> I expect this is either already fixed or a problem of KChart. I am using
> libKChart2-2.6.0-1.1.x86_64 on my openSUSE 42.3 with current KMyMoney 5.0
> HEAD and am unable to duplicate the problem. Which version of KChart is used
> on your system?

Information for package libKChart2:
-----------------------------------
Repository     : openSUSE-Leap-15.0-1
Name           : libKChart2
Version        : 2.6.0-lp150.1.12
Arch           : x86_64
Vendor         : openSUSE
Installed Size : 1,5 MiB
Installed      : Yes (automatically)
Status         : up-to-date
Source package : kdiagram-2.6.0-lp150.1.12.src
Summary        : KChart library for kdiagram
Description    :
    This package contains the KChart libraries from the kdiagram package.
Comment 7 Andrew Crouthamel 2018-10-21 05:02:54 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 8 Octopuss 2018-10-22 12:06:31 UTC
Sorry for didn't chanhge the status before. Info was provided on 2018-10-02
Comment 9 Thomas Baumgart 2018-12-01 12:51:59 UTC
Git commit e29ab436caac3b2eda310b7b3d201831eddf25f8 by Thomas Baumgart.
Committed on 01/12/2018 at 12:52.
Pushed by tbaumgart into branch '5.0'.

Make sure to display full title on charts

Upstream library software (kdiagram) causes the title of a chart to be
chopped off on the right side as shown in attachments to bug #399260. I
used gammaray to see that the full title name was passed to the drawing
routines inside kdiagram but still it got truncated. Adding a few extra
spaces (5 in this case) at the end solved the issue.
FIXED-IN: 5.0.3

M  +3    -1    kmymoney/plugins/views/reports/core/kreportchartview.cpp

https://commits.kde.org/kmymoney/e29ab436caac3b2eda310b7b3d201831eddf25f8